# dvi2html-rs

./: Cargo.toml  README.md
crate/: .gitignore  Cargo.toml  README.md  fontsfull.json
crate/src/: htmlmachine.rs  lib.rs  machine.rs  tfm.rs  tfmdata  utils.rs
crate/testfiles/: README.md  color.tex  pgfsys-ximera.def  two_page.tex
dvi2html-rs/: Cargo.toml
src/: htmlmachine.rs  lib.rs  machine.rs  tfm.rs
testfiles/: README.md  color.dvi  two_page.dvi  two_page_tikz.dvi  two_page_tikz.tex
wasm/: Cargo.toml  LICENSE_MIT  README.md
wasm/src/: lib.rs
wasm/www/: index.js  package-lock.json  package.json
