[package]
name = "dvi2html"
version = "0.1.0"
authors = ["Jesse Hoobergs <jesse@hoobergs.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dvi = { git = "https://github.com/jhoobergs/dvi-rs" } # "^0.1.0"
serde = {version="1.0.110", features=["derive"]}
serde_json = "1.0.53"
